--- a/Walkies.Web/Views/Account/Register.cshtml
+++ b/Walkies.Web/Views/Account/Register.cshtml
@@ -86,6 +86,7 @@
                                     </form>
                                 </div>
                             </div>
+                            <button class="btn btn-primary" name="submitAction" value="Cancel" onclick="window.location.href='@Url.Content("~/")/Account/Login'"><i class="glyphicon"></i> Log in</button>
                         </div>
 
                         <ul>
