--- a/Walkies.Web/Views/Home/Index.cshtml
+++ b/Walkies.Web/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Homepage - Walkies";
 }
+@model Walkies.Common.Models.AccountUser
+
 <html>
 <head>
     <meta charset="utf-8">
@@ -16,7 +18,7 @@
     <div id="mainWrapper">
         <header>
             <!-- This is the header content. It contains Logo and links -->
-            <div id="headerLinks"><strong><a href="@Url.Content("~/Account/Profile")">Profile</a></strong></div>
+            <div id="headerLinks"><strong><a href="@Url.Content("~/Account/Login")">Log in</a></strong></div>
         </header>
         <section id="doggo_logo"></section>
         <section id="image_logo">
@@ -60,38 +62,48 @@
                         </h5>
                         <hr>
                         <h2>Sign Up to Walk</h2>
-                        <form>
+                        <form method="post" class="form-horizontal">
                             <div class="form-group">
-                                <label for="name1"></label>
-                                <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
-                                <small id="name1" class="form-text text-muted"></small>
+                                <label asp-for="FirstName" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="FirstName" class="form-control" />
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="name2"></label>
-                                <input type="name2" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
-                                <small id="name_last" class="form-text text-muted"></small>
+                                <label asp-for="LastName" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="LastName" class="form-control" />
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="Email"></label>
-                                <input type="email" class="form-control" id="Email" aria-describedby="email" placeholder="Email">
-                                <small id="email" class="form-text text-muted"></small>
+                                <label class="control-label col-md-2">User Type</label>
+                                <div class="col-md-4">
+                                    <select asp-for="UserTypeCode" class="form-control" required asp-items="@(new SelectList(ViewBag.userTypes, "UserTypeCode", "Name"))"></select>
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="Phone"></label>
-                                <input type="phone" class="form-control" id="Phone" aria-describedby="phone" placeholder="Phone">
-                                <small id="phone" class="form-text text-muted"></small>
+                                <label asp-for="LoginEmail" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="LoginEmail" class="form-control" required />
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="Password"></label>
-                                <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Password">
-                                <small id="password1" class="form-text text-muted"></small>
+                                <label asp-for="Password" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="Password" class="form-control" />
+                                </div>
                             </div>
-                            <p></p>
-                            <a href="@Url.Content("~/Home/Index")">
-                                <button type="submit" class="Submit">Submit</button>
-                            </a>
+                            <div class="form-group">
+                                <label asp-for="RecoveryPhone" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input type="tel" asp-for="RecoveryPhone" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <br><br />
+                                <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-plus"></i> Sign up</button>
+                            </div>
                         </form>
-
                         <ul>
                             <!-- List of links under menuset 1 -->
                             <!--<li><a href="#" title="Link">Link 1</a></li>
