--- a/Walkies.Web/Views/Shelter/Doggos.cshtml
+++ b/Walkies.Web/Views/Shelter/Doggos.cshtml
@@ -51,34 +51,47 @@
                         </h5>
                         <hr>
                         <h2>Sign Up to Walk</h2>
-                        <form method="post">
+                        <form method="post" class="form-horizontal">
                             <div class="form-group">
-                                <label for="name1"></label>
-                                <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
-                                <small id="name1" class="form-text text-muted"></small>
+                                <label asp-for="FirstName" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="FirstName" class="form-control" />
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="name2"></label>
-                                <input type="text" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
-                                <small id="name_last" class="form-text text-muted"></small>
+                                <label asp-for="LastName" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="LastName" class="form-control" />
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="Email"></label>
-                                <input type="email" class="form-control" id="Email" aria-describedby="email" placeholder="Email">
-                                <small id="email" class="form-text text-muted"></small>
+                                <label class="control-label col-md-2">User Type</label>
+                                <div class="col-md-4">
+                                    <select asp-for="UserTypeCode" class="form-control" required asp-items="@(new SelectList(ViewBag.userTypes, "UserTypeCode", "Name"))"></select>
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="Phone"></label>
-                                <input type="tel" class="form-control" id="Phone" aria-describedby="phone" placeholder="Phone">
-                                <small id="phone" class="form-text text-muted"></small>
+                                <label asp-for="LoginEmail" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="LoginEmail" class="form-control" required />
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="Password"></label>
-                                <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Password">
-                                <small id="password1" class="form-text text-muted"></small>
+                                <label asp-for="Password" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input asp-for="Password" class="form-control" />
+                                </div>
                             </div>
-                            <p></p>
-                            <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-plus"></i> Sign Up</button>
+                            <div class="form-group">
+                                <label asp-for="RecoveryPhone" class="control-label col-md-2"></label>
+                                <div class="col-md-4">
+                                    <input type="tel" asp-for="RecoveryPhone" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <br><br />
+                                <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-plus"></i> Sign up</button>
+                            </div>
                         </form>
                     </nav>
 
