--- a/Walkies.Admin/Views/Login/Create.cshtml
+++ b/Walkies.Admin/Views/Login/Create.cshtml
@@ -10,56 +10,52 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" class="form-horizontal">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label class="control-label col-md-2">State</label>
-                <div class="col-md-4">
-                    <select asp-for="UserTypeCode" class="form-control" required>
-                        <option selected disabled="disabled">Select State</option>
-                        <option value="ADM">Admin</option>
-                        <option value="USR">User</option>
-                        <option value="STR">Strict</option>
-                        <option value="SHEL">Shelter</option>
-                        <option value="MD">Mod</option>
-                        </select>
-                    </div>
-                <div class="form-group">
-                    <label asp-for="FirstName" class="control-label"></label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LastName" class="control-label"></label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LoginEmail" class="control-label"></label>
-                    <input asp-for="LoginEmail" class="form-control" />
-                    <span asp-validation-for="LoginEmail" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="RecoveryPhone" class="control-label"></label>
-                    <input asp-for="RecoveryPhone" class="form-control" />
-                    <span asp-validation-for="RecoveryPhone" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PasswordHash" class="control-label"></label>
-                    <input asp-for="PasswordHash" class="form-control" />
-                    <span asp-validation-for="PasswordHash" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary" type="submit" name="submitAction" value="Create"><i class="glyphicon glyphicon-plus"></i> Sign Up</button>
-                </div>
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UserTypeCode" class="control-label"></label>
+                <select asp-for="UserTypeCode" class="form-control" required>
+                    <option selected disabled="disabled">Select User Type</option>
+                    <option value="ADM">Admin</option>
+                    <option value="USR">User</option>
+                    <option value="STR">Strict</option>
+                    <option value="SHEL">Shelter</option>
+                    <option value="MD">Mod</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="LoginEmail" class="control-label"></label>
+                <input asp-for="LoginEmail" class="form-control" />
+                <span asp-validation-for="LoginEmail" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RecoveryPhone" class="control-label"></label>
+                <input asp-for="RecoveryPhone" class="form-control" />
+                <span asp-validation-for="RecoveryPhone" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PasswordHash" class="control-label"></label>
+                <input asp-for="PasswordHash" class="form-control" />
+                <span asp-validation-for="PasswordHash" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit" name="submitAction" value="Create"><i class="glyphicon glyphicon-plus"></i> Sign Up</button>
+            </div>
         </form>
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
