--- a/Walkies.Web/Views/Home/Index.cshtml
+++ b/Walkies.Web/Views/Home/Index.cshtml
@@ -64,39 +64,39 @@
                         <h2>Sign Up to Walk</h2>
                         <form method="post" class="form-horizontal">
                             <div class="form-group">
-                                <label asp-for="FirstName" class="control-label col-md-2"></label>
+                                <label class="control-label col-md-2"></label>
                                 <div class="col-md-4">
-                                    <input asp-for="FirstName" class="form-control" />
+                                    <input asp-for="FirstName" class="form-control" placeholder="First Name" />
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label asp-for="LastName" class="control-label col-md-2"></label>
+                                <label class="control-label col-md-2"></label>
                                 <div class="col-md-4">
-                                    <input asp-for="LastName" class="form-control" />
+                                    <input asp-for="LastName" class="form-control" placeholder="Last Name" />
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-md-2">User Type</label>
+                                <label class="control-label col-md-2"></label>
                                 <div class="col-md-4">
-                                    <select asp-for="UserTypeCode" class="form-control" required asp-items="@(new SelectList(ViewBag.userTypes, "UserTypeCode", "Name"))"></select>
+                                    <select asp-for="UserTypeCode" class="form-control" required asp-items="@(new SelectList(ViewBag.userTypes, "UserTypeCode", "Name"))" placeholder="User Type"></select>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label asp-for="LoginEmail" class="control-label col-md-2"></label>
+                                <label class="control-label col-md-2"></label>
                                 <div class="col-md-4">
-                                    <input asp-for="LoginEmail" class="form-control" required />
+                                    <input asp-for="LoginEmail" class="form-control" required placeholder="Email" />
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Password" class="control-label col-md-2"></label>
+                                <label class="control-label col-md-2"></label>
                                 <div class="col-md-4">
-                                    <input asp-for="Password" class="form-control" />
+                                    <input asp-for="Password" class="form-control" required placeholder="Password" />
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label asp-for="RecoveryPhone" class="control-label col-md-2"></label>
+                                <label class="control-label col-md-2"></label>
                                 <div class="col-md-4">
-                                    <input type="tel" asp-for="RecoveryPhone" class="form-control" />
+                                    <input type="tel" asp-for="RecoveryPhone" class="form-control" placeholder="Phone Number" />
                                 </div>
                             </div>
                             <div class="form-group">
