Fixed Bugs, Got Client Working Again.

--- a/Walkies.Web/Views/Account/Login.cshtml
+++ b/Walkies.Web/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
         </header>
         <section id="image_logo">
             <a href="@Url.Content("~/Home/Index")">
-                <img src="@Url.Content("~Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~Images/TextLogo.png")" width="400" height="317" alt="" />
+                <img src="@Url.Content("~/Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~/Images/TextLogo.png")" width="400" height="317" alt="" />
             </a>
         </section>
 
