--- a/Walkies.Web/Views/Account/Login.cshtml
+++ b/Walkies.Web/Views/Account/Login.cshtml
@@ -58,7 +58,7 @@
                                     </form>
                                 </div>
                             </div>
-                            <button class="btn btn-primary" name="submitAction" value="Cancel" onclick="window.location.href='@Url.Content("~/")/Account/Register'"><i class="glyphicon"></i> Signup for New Account</button>
+                            <button class="btn btn-primary" name="submitAction" value="Cancel" onclick="window.location.href='@Url.Content("~/Account/Register")'"><i class="glyphicon"></i> Signup for New Account</button>
                         </div>
 
                         <ul>
