--- a/Walkies.Web/Views/Account/Register.cshtml
+++ b/Walkies.Web/Views/Account/Register.cshtml
@@ -22,7 +22,7 @@
         </header>
         <section id="image_logo">
             <a href="@Url.Content("~/Home/Index")">
-                <img src="@Url.Content("~Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~Images/TextLogo.png")" width="400" height="317" alt="" />
+                <img src="@Url.Content("~/Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~/Images/TextLogo.png")" width="400" height="317" alt="" />
             </a>
         </section>
 
@@ -81,12 +81,12 @@
                                         </div>
                                         <div class="form-group">
                                             <br><br />
-                                            <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-plus"></i> Sign up</button>
+                                            <button class="btn btn-primary" type="submit" name="submitAction" value="Register"><i class="glyphicon glyphicon-plus"></i> Sign up</button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
-                            <button class="btn btn-primary" name="submitAction" value="Cancel" onclick="window.location.href='@Url.Content("~/")/Account/Login'"><i class="glyphicon"></i> Log in</button>
+                            <button class="btn btn-primary" name="submitAction" value="Cancel" onclick="window.location.href='@Url.Content("~/Account/Login")'"><i class="glyphicon"></i> Log in</button>
                         </div>
 
                         <ul>
