--- a/Walkies.Web/Views/Shelter/Doggos.cshtml
+++ b/Walkies.Web/Views/Shelter/Doggos.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Doggos - Walkies";
 }
-@model Walkies.Common.Models.AccountUser
+@model IEnumerable<Walkies.Common.Models.Dog>
 
 <html>
 <head>
@@ -21,7 +21,7 @@
 
             <div id="headerLinks"><a href="@Url.Content("~/Account/LoginRegister")">Login/Register</a><a href="@Url.Content("~/Account/Profile")">Profile</a></div>
             <a href="@Url.Content("~/Home/Index")">
-                <img src="@Url.Content("~Images/TextLogo.png")" width="200" height="164" alt="" />
+                <img src="@Url.Content("~/Images/TextLogo.png")" width="200" height="164" alt="" />
             </a>
         </header>
         <section id="shelter">
@@ -50,49 +50,7 @@
                             <input type="button" name="button" value="Sign Up" class="SignUp">
                         </h5>
                         <hr>
-                        <h2>Sign Up to Walk</h2>
-                        <form method="post" class="form-horizontal">
-                            <div class="form-group">
-                                <label asp-for="FirstName" class="control-label col-md-2"></label>
-                                <div class="col-md-4">
-                                    <input asp-for="FirstName" class="form-control" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="LastName" class="control-label col-md-2"></label>
-                                <div class="col-md-4">
-                                    <input asp-for="LastName" class="form-control" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label col-md-2">User Type</label>
-                                <div class="col-md-4">
-                                    <select asp-for="UserTypeCode" class="form-control" required asp-items="@(new SelectList(ViewBag.userTypes, "UserTypeCode", "Name"))"></select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="LoginEmail" class="control-label col-md-2"></label>
-                                <div class="col-md-4">
-                                    <input asp-for="LoginEmail" class="form-control" required />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Password" class="control-label col-md-2"></label>
-                                <div class="col-md-4">
-                                    <input asp-for="Password" class="form-control" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="RecoveryPhone" class="control-label col-md-2"></label>
-                                <div class="col-md-4">
-                                    <input type="tel" asp-for="RecoveryPhone" class="form-control" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <br><br />
-                                <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-plus"></i> Sign up</button>
-                            </div>
-                        </form>
+                      
                     </nav>
 
                 </div>
